<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charminder</string>
    <string name="noti_default">Charminder is running in the background</string>
    <string name="none"></string>
    <string name="floating_icon_name">Charmy</string>
    <string name="b_welcome_greeting">Hi, my name is %1$s!\u0020</string>
    <string name="b_user_guide">Try dragging me somewhere please!</string>
    <string name="b_exit">Bye, I will miss you!</string>
    <string name="b_exit_completely">Take care, you will not be reminded after I\'m gone.</string>
    <string name="popDialog_defualtTitle">Charminder</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="onExit_title">Exit</string>
    <string name="onExit_content">Do you want to still receive notification after you exit %1$s?</string>
    <string name="unit_year">Y</string>
    <string name="unit_month">M</string>
    <string name="unit_day">D</string>
    <string name="unit_hour">h</string>
    <string name="unit_minute">m</string>
    <string name="unit_second">s</string>
    <string name="unit_everyhour">Every</string>
    <string name="priority">Priority</string>
    <string name="a_m_">a.m.</string>
    <string name="p_m_">p.m.</string>
    <string name="speech_recognition_speak_now">Speak now</string>
    <string name="speech_recognition_speak_end">Tap the mic above</string>
    <string name="speech_recognition_edit_button_text">Edit</string>
    <string name="speech_recognition_rerecord_button_text">Re-speak</string>
    <string name="speech_recognition_error1">Network operation timed out</string>
    <string name="speech_recognition_error2">Network error</string>
    <string name="speech_recognition_error3">Audio recording error</string>
    <string name="speech_recognition_error4">Server sends error status</string>
    <string name="speech_recognition_error8">Recognition service is busy</string>
    <string name="speech_recognition_error9">Insufficient permissions</string>
    <string name="speech_recognition_error_unknown">Unknown error %1$s</string>
    <string name="speech_recognition_no_input">No input</string>
    <string name="setting_catagory_general">General Settings</string>
    <string name="setting_catagory_priority">Priority Settings</string>
    <string name="setting_catagory_other">Other</string>
    <string name="setting_circle_interface">Wheel layout</string>
    <string name="setting_forenoti">Show persistent notification</string>
    <string name="setting_autodelete">Auto delete expired reminders</string>
    <string name="setting_bubbletime">Bubble disapear time</string>
    <string name="settings_turn_off_notification_title">Warning</string>
    <string name="settings_turn_off_notification_content">Are you sure you want to turn off the persistent notification? Android may kill the background service when memory is low, and this app might completely stop working on some devices.\n Do you want to continue?</string>
    
    <string name="settings_title">Settings</string>
    <string name="select_bubbletimeout">Select time:</string>
    <string name="setting_about">About Charminder</string>
    <string name="setting_exit">Exit</string>
    <string name="priority_setting_title">Priority Settings</string>
    <string name="priority_setting_prompt">Reminding Method</string>
    <string name="priority_bubble">Push bubble</string>
    <string name="priority_notification_center">Push notification</string>
    <string name="priority_wake_screen">Wake screen</string>
    <string name="priority_vibrate">Vibrate</string>
    <string name="priority_sound">Sound</string>
    <string name="circle_layout_setting_title">Wheel Layout</string>
    <string name="circle_layout_setting_prompt">Long press and drag to move each tile</string>
    <string name="circle_layout_setting_not_used">Not used tiles</string>
    <string name="circle_layout_setting_cannot_remove_settings_icon">You can\'t remove settings</string>
    <string name="reminder_list_title">Reminder List</string>
    <string name="reminder_list_empty">It\'s empty here, \n Why not go and add some reminders?</string>
    <string name="reminder_list_item_expired">Expired</string>
    <string name="reminder_list_item_edit">Edit</string>
    <string name="reminder_list_item_delete">Delete</string>
    <string name="reminder_list_item_delete_dialog_title">Delete reminder</string>
    <string name="reminder_list_item_delete_dialog_content">Are you sure you want to delete this reminder?</string>
    <string name="edit_title_prompt">Title</string>
    <string name="edit_time_prompt">Time</string>
    <string name="edit_priority_prompt">Priority</string>
    <string name="edit_repeat_prompt">Repeat</string>
    <string name="edit_location_prompt">Location</string>
    <string name="edit_note_prompt">Note</string>
    <string name="edit_time_picker_prompt">Select a time</string>
    <string name="edit_repeat_picker_prompt">Repetition</string>
	<string name="error_no_voice_recognition_service_title">Error</string>
	<string name="error_no_voice_recognition_service">No voice recognition service found on your device. You need to have Google Voice Search installed first. Do you want to go to the app store?</string>
	<string name="error_no_voice_recognition_service_install">Install</string>
    <string name="no_floating_window_activity">Permission</string>
    <string name="no_floating_window_activity_content">Due to system restriction, the floating wheel isn\'t shown, which is the main feature of this app. Please grant the permission with the help of this guide so that this app can run properly.</string>
    <string name="no_floating_window_activity_step0">To grant Floating Window permission:</string>
    <string name="no_floating_window_activity_step1">Step 1:\n\n Open App Info by going to Settings - Installed apps - Charminder\n</string>
    <string name="no_floating_window_activity_button">Or click here to open App Info</string>
    <string name="no_floating_window_activity_step2">Step 2:\n\n Scrool down to the bottom and click Manage permissions\n</string>
    <string name="no_floating_window_activity_step3">Final:\n\n Turn on popup windows\n</string>
    <string name="no_floating_window_activity_finish">Already granted. Don\'t show this again</string>
	<string name="about_website">CharmySoft.com</string>
	<string name="about_check_for_update">Check for update</string>
	<string name="about_feedback">Feedback</string>
	<string name="about_rate">Rate this app</string>
	<string name="about_copyright">Copyright © 2014 CharmySoft.com\nAll Rights Reserved.</string>
	<string name="about_update_already_latest">You\'re already running the latest version</string>
	<string name="maincircle_help">You can run your finger through the main wheel and see each tile, or you can long press the tile and read the detailed description of it.</string>
</resources>