<?xml version="1.0" encoding="utf-8"?>
<com.CharmySoft.charminder.activities.layout.ActivityWrapper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:charmy="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    charmy:background_color="@color/light_blue"
    charmy:head_margin="0dp"
    charmy:title_text="@string/reminder_list_title" >

    <ImageView
        android:id="@+id/reminder_list_empty"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/darkblue_circle"
        android:contentDescription="@string/none"
        android:src="@drawable/reminderlist" />

    <TextView
        android:id="@+id/reminder_list_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:maxWidth="256dp"
        android:text="@string/reminder_list_empty"
        android:textColor="@color/dark_blue"
        android:textSize="18sp" />

    <View
        android:id="@+id/reminder_foot"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/back_lightblue_to_blue" />

</com.CharmySoft.charminder.activities.layout.ActivityWrapper>